feat(user): enhance subject response with comprehensive metadata
- Add complete subject information in teacher profile responses
- Include description, active status, level, cycle, and department details
- Add teacher information (ID and full name) to subject responses
- Improve data completeness for frontend consumption
- Replace .toList() with .collect(Collectors.toList()) for better compatibility